--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
     <link rel="script" src="js/script.js">
+    <link rel="icon" type="image/png" href="img/icons/favicon.png">
 </head>
 
 <body>
