--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <nav class="navbar">
         <div class="logo">
             <a href="index.html">
-                <img src="img/Logo.png" alt="Mobilny Relax Logo">
-            </a>
+                <video autoplay loop muted>
+                    <source src="img/Animated_Logo.mp4" type="video/mp4">
+                </video> </a>
         </div>
 
         <ul class="nav-links" id="myTopnav">
@@ -44,16 +45,14 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <h1>Sauna & Jacuzzi</h1>
-        <p>Rent now!</p>
-    </section>
-
-    <!-- Placeholder Sections -->
+    <!-- Content -->
     <div class="content">
-        <img src=""> 
+        <div class="">
+            <img src="img/photos/photo_1.jpg">
+        </div>
     </div>
+
+
 
     <br><br>
     <footer>
@@ -80,8 +79,10 @@
             </div>
 
             <div class="footer-social">
-                <a href="https://www.facebook.com/profile.php?id=100089057426576" target="_blank"><img src="img/icons/facebook.png"></a>
-                <a href="https://www.instagram.com/mobilnyrelax/" target="_blank"><img src="img/icons/instagram.png"></a>
+                <a href="https://www.facebook.com/profile.php?id=100089057426576" target="_blank"><img
+                        src="img/icons/facebook.png"></a>
+                <a href="https://www.instagram.com/mobilnyrelax/" target="_blank"><img
+                        src="img/icons/instagram.png"></a>
             </div>
         </div>
     </footer>
