--- a/index.html
+++ b/index.html
@@ -46,10 +46,8 @@
     </nav>
 
     <!-- Content -->
-    <div class="content">
-        <div class="">
-            <img src="img/photos/photo_1.jpg">
-        </div>
+    <div class="container">
+        
     </div>
 
 
