--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobilny Relax - Sauna & Jacuzzi</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
     <link rel="icon" type="image/png" href="img/icons/favicon.png">
 </head>
@@ -26,7 +23,8 @@
             <a href="index.html">
                 <video autoplay loop muted>
                     <source src="img/Animated_Logo.mp4" type="video/mp4">
-                </video> </a>
+                </video>
+            </a>
         </div>
 
         <ul class="nav-links" id="myTopnav">
@@ -45,48 +43,133 @@
         </div>
     </nav>
 
-    <!-- Content -->
-    <div class="container">
-
-    </div>
-
-
-
-    <br><br>
-    <footer>
-        <div class="footer-container">
-            <div class="footer-links">
-                <a href="about.html">About</a>
-                <a href="services.html">Services</a>
-                <a href="contact.html">Contact</a>
-                <a href="gallery.html">Gallery</a>
-                <a href="faq.html">FAQ</a>
+    <div id="page-container">
+        <!-- Content Wrapper -->
+        <div id="content-wrap">
+            <!-- Hero Section -->
+            <div class="card text-bg-dark">
+                <img src="img/photos/photo_1.jpg" alt="Sauna & Jacuzzi">
+                <div class="card-img-overlay">
+                    <h5 class="card-title">Sauna & Jacuzzi</h5>
+                    <p class="card-text">Relax on your terms!</p>
+                </div>
             </div>
 
-            <div class="footer-logo">
-                <a href="index.html">
-                    <img src="img/Logo.png">
-                </a>
+
+            <div class="header" id="top">
+                <i class="fa fa-angle-down animated bounce"></i>
             </div>
 
-            <hr> <!-- Horizontal line to separate bottom section -->
-
-            <div class="footer-info">
-                <p>&copy; 2025 Mobilny Relax. All Rights Reserved.</p>
-                <p>Włodawa, Poland | Email: contact@mobilnyrelax.pl | Phone: +48 123 456 789</p>
+            <div class="section animate">
+                <div class="middle">
+                    <img src="img/photos/proposal_Image.jpg" />
+                </div>
+                <div class="left title">
+                    <div class="content">
+                        <h2>Sauna</h2>
+                        <p>Outdoor activity</p>
+                        <a href="#" class="btn-primary">Learn more</a>
+                    </div>
+                </div>
+                <div class="right tiles">
+                    <img src="img/photos/proposal_Image_inverted.jpg" />
+                </div>
             </div>
 
-            <div class="footer-social">
-                <a href="https://www.facebook.com/profile.php?id=100089057426576" target="_blank"><img
-                        src="img/icons/facebook.png"></a>
-                <a href="https://www.instagram.com/mobilnyrelax/" target="_blank"><img
-                        src="img/icons/instagram.png"></a>
+            <div class="section">
+                <div class="middle">
+                    <img src="img/photos/IMG20230111153851.jpg" />
+                </div>
+                <div class="right title">
+                    <div class="content">
+                        <h2>Jacuzzi</h2>
+                        <p>What an interesting looking person! I wonder if they've ever climbed Mount Everest, or seen
+                            the
+                            Egyptian Pyramids. If not, I hope that one day they get to. You go random stock image
+                            person!
+                            Follow your dreams!</p>
+                    </div>
+                </div>
+
+                <div class="left tiles">
+                    <img src="img/photos/sauna_rocks_inverted.jpg" />
+                </div>
+
+            </div>
+
+            <div class="section">
+                <div class="middle">
+                    <img src="img/photos/IMG20230111153556.jpg" />
+                </div>
+                <div class="left title">
+                    <div class="content">
+                        <h2>Health Perks</h2>
+                        <p>What is the better use of time than taking care of yourself and having fun?</p>
+                        <a href="#" class="btn-primary">Learn more</a>
+                    </div>
+                </div>
+
+                <div class="right tiles">
+                    <img src="img/photos/photo_3.jpg" />
+
+                </div>
+
+            </div>
+
+            <div class="section">
+                <div class="middle">
+                    <img src="img/photos/photo_4.jpg" />
+                </div>
+                <div class="right title">
+                    <div class="content">
+                        <h2>The future is now.</h2>
+                        <p>Check out that technology! Imagine if we went back in time and put one of those in the hands
+                            of a
+                            neanderthal. Do you think they'd be impressed, or just try to club us to death?</p>
+                    </div>
+                </div>
+
+                <div class="left tiles">
+                    <img src="img/photos/photo_4_inverted.jpg" />
+                </div>
+
             </div>
         </div>
-    </footer>
+        <br><br><br><br>
+
+        <footer>
+            <div class="footer-container">
+                <div class="footer-links">
+                    <a href="about.html">About</a>
+                    <a href="services.html">Services</a>
+                    <a href="contact.html">Contact</a>
+                    <a href="gallery.html">Gallery</a>
+                    <a href="faq.html">FAQ</a>
+                </div>
+
+                <div class="footer-logo">
+                    <a href="index.html">
+                        <img src="img/Logo.png">
+                    </a>
+                </div>
+
+                <hr> <!-- Horizontal line to separate bottom section -->
+
+                <div class="footer-info">
+                    <p>&copy; 2025 Mobilny Relax. All Rights Reserved.</p>
+                </div>
+
+                <div class="footer-social">
+                    <a href="https://www.facebook.com/profile.php?id=100089057426576" target="_blank"><img
+                            src="img/icons/facebook.png"></a>
+                    <a href="https://www.instagram.com/mobilnyrelax/" target="_blank"><img
+                            src="img/icons/instagram.png"></a>
+                </div>
+            </div>
+        </footer>
 
 
-
+    </div>
 </body>
 
 </html>
