--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
                 </div>
 
-            </div>
+            </div><br>
 
             <div class="section">
                 <div class="middle">
