--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobilny Relax - Sauna & Jacuzzi</title>
+    <title data-lang="title">Mobilny Relax - Sauna & Jacuzzi</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -17,7 +17,7 @@
 
 <body>
     <!-- Navigation Bar -->
-    <div class="navbar-top">We offer delivery, setup and start-up assistance.</div>
+    <div class="navbar-top" data-lang="navbar-top">We offer delivery, setup and start-up assistance.</div>
     <nav class="navbar">
         <div class="logo">
             <a href="index.html">
@@ -28,47 +28,44 @@
         </div>
 
         <ul class="nav-links" id="myTopnav">
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#gallery">Gallery</a></li>
-            <li><a href="#faq">FAQ</a></li>
+            <li><a href="#about" data-lang="about">About</a></li>
+            <li><a href="services.html" data-lang="services">Services</a></li>
+            <li><a href="contact.html" data-lang="contact">Contact</a></li>
+            <li><a href="gallery.html" data-lang="gallery">Gallery</a></li>
+            <li><a href="faq.html" data-lang="faq">FAQ</a></li>
         </ul>
-        <button class="phone-button">Phone Num.</button>
+        <button class="phone-button" data-lang="phone-number">Phone Num.</button>
         <div class="nav-bottom">
             <div class="language-buttons">
-                <button>English</button>
-                <button>Polish</button>
+                <button onclick="changeLanguage('en')">English</button>
+                <button onclick="changeLanguage('pl')">Polski</button>
             </div>
         </div>
     </nav>
 
     <div id="page-container">
-        <!-- Content Wrapper -->
         <div id="content-wrap">
-            <!-- Hero Section -->
             <div class="card text-bg-dark">
                 <img src="img/photos/photo_1.jpg" alt="Sauna & Jacuzzi">
                 <div class="card-img-overlay">
-                    <h5 class="card-title">Sauna & Jacuzzi</h5>
-                    <p class="card-text">Relax on your terms!</p>
+                    <h5 data-lang="hero-title" class="card-title">Sauna & Jacuzzi</h5>
+                    <p class="card-text" data-lang="hero-description">Relax on your terms!</p>
                 </div>
             </div>
-
 
             <div class="header" id="top">
                 <i class="fa fa-angle-down animated bounce"></i>
             </div>
 
             <div class="section animate">
-                <div class="middle">
+                <div class="middle" id="about">
                     <img src="img/photos/proposal_Image.jpg" />
                 </div>
                 <div class="left title">
                     <div class="content">
-                        <h2>Sauna</h2>
-                        <p>Outdoor activity</p>
-                        <a href="#" class="btn-primary">Learn more</a>
+                        <h2 data-lang="sauna-title">Sauna</h2>
+                        <p data-lang="sauna-description">Outdoor activity</p>
+                        <a href="#" class="btn-primary" data-lang="learn-more">Learn more</a>
                     </div>
                 </div>
                 <div class="right tiles">
@@ -82,19 +79,17 @@
                 </div>
                 <div class="right title">
                     <div class="content">
-                        <h2>Jacuzzi</h2>
-                        <p>What an interesting looking person! I wonder if they've ever climbed Mount Everest, or seen
-                            the
-                            Egyptian Pyramids. If not, I hope that one day they get to. You go random stock image
-                            person!
-                            Follow your dreams!</p>
+                        <h2 data-lang="jacuzzi-title">Jacuzzi</h2>
+                        <p data-lang="jacuzzi-description">What an interesting looking person! I wonder if they've ever
+                            climbed Mount Everest, or seen
+                            the Egyptian Pyramids. If not, I hope that one day they get to. You go random stock image
+                            person! Follow your dreams!</p>
                     </div>
                 </div>
 
                 <div class="left tiles">
                     <img src="img/photos/sauna_rocks_inverted.jpg" />
                 </div>
-
             </div>
 
             <div class="section">
@@ -103,18 +98,17 @@
                 </div>
                 <div class="left title">
                     <div class="content">
-                        <h2>Health Perks</h2>
-                        <p>What is the better use of time than taking care of yourself and having fun?</p>
-                        <a href="#" class="btn-primary">Learn more</a>
+                        <h2 data-lang="health-perks-title">Health Perks</h2>
+                        <p data-lang="health-perks-description">What is the better use of time than taking care of
+                            yourself and having fun?</p>
+                        <a href="#" class="btn-primary" data-lang="learn-more">Learn more</a>
                     </div>
                 </div>
 
                 <div class="right tiles">
                     <img src="img/photos/photo_3.jpg" />
-
                 </div>
-
-            </div><br>
+            </div>
 
             <div class="section">
                 <div class="middle">
@@ -122,29 +116,27 @@
                 </div>
                 <div class="right title">
                     <div class="content">
-                        <h2>The future is now.</h2>
-                        <p>Check out that technology! Imagine if we went back in time and put one of those in the hands
-                            of a
-                            neanderthal. Do you think they'd be impressed, or just try to club us to death?</p>
+                        <h2 data-lang="future-title">The future is now.</h2>
+                        <p data-lang="future-description">Check out that technology! Imagine if we went back in time and
+                            put one of those in the hands
+                            of a neanderthal. Do you think they'd be impressed, or just try to club us to death?</p>
                     </div>
                 </div>
 
                 <div class="left tiles">
                     <img src="img/photos/photo_4_inverted.jpg" />
                 </div>
-
             </div>
         </div>
-        <br><br><br><br>
 
         <footer>
             <div class="footer-container">
                 <div class="footer-links">
-                    <a href="about.html">About</a>
-                    <a href="services.html">Services</a>
-                    <a href="contact.html">Contact</a>
-                    <a href="gallery.html">Gallery</a>
-                    <a href="faq.html">FAQ</a>
+                    <a href="#about" data-lang="about">About</a>
+                    <a href="services.html" data-lang="services">Services</a>
+                    <a href="contact.html" data-lang="contact">Contact</a>
+                    <a href="gallery.html" data-lang="gallery">Gallery</a>
+                    <a href="faq.html" data-lang="faq">FAQ</a>
                 </div>
 
                 <div class="footer-logo">
@@ -153,10 +145,10 @@
                     </a>
                 </div>
 
-                <hr> <!-- Horizontal line to separate bottom section -->
+                <hr>
 
                 <div class="footer-info">
-                    <p>&copy; 2025 Mobilny Relax. All Rights Reserved.</p>
+                    <p data-lang="footer-rights">&copy; 2025 Mobilny Relax. All Rights Reserved.</p>
                 </div>
 
                 <div class="footer-social">
@@ -167,9 +159,43 @@
                 </div>
             </div>
         </footer>
-
-
     </div>
+
+    <script>
+        let translations = {};
+
+        // Load translations
+        fetch("translations.json")
+            .then(response => response.json())
+            .then(data => {
+                translations = data;
+                applyLanguage(localStorage.getItem("selectedLanguage") || "en"); // Default to English
+            });
+
+        function changeLanguage(lang) {
+            localStorage.setItem("selectedLanguage", lang);
+            applyLanguage(lang);
+        }
+
+        function applyLanguage(lang) {
+            document.querySelectorAll("[data-lang]").forEach(element => {
+                let key = element.getAttribute("data-lang");
+                if (translations[lang][key]) {
+                    element.textContent = translations[lang][key];
+                }
+            });
+        }
+
+        // scroll to the 'about' section
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener("click", function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute("href"));
+                if (target) target.scrollIntoView({ behavior: "smooth", block: "start" });
+            });
+        });
+
+    </script>
 </body>
 
 </html>
