--- a/index.html
+++ b/index.html
@@ -5,13 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-lang="title">Mobilny Relax - Sauna & Jacuzzi</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/png" href="img/icons/favicon.png">
 </head>
 
@@ -48,8 +44,9 @@
             <div class="card text-bg-dark">
                 <img src="img/photos/photo_1.jpg" alt="Sauna & Jacuzzi">
                 <div class="card-img-overlay">
-                    <h5 data-lang="hero-title" class="card-title">Sauna & Jacuzzi</h5>
+                    <h5 data-lang="hero-title" class="card-title">Sauna & Jacuzzi on Wheels</h5>
                     <p class="card-text" data-lang="hero-description">Relax on your terms!</p>
+                    <button id="first-button">Click Me</button>
                 </div>
             </div>
 
@@ -63,9 +60,10 @@
                 </div>
                 <div class="left title">
                     <div class="content">
-                        <h2 data-lang="sauna-title">Sauna</h2>
-                        <p data-lang="sauna-description">Outdoor activity</p>
-                        <a href="#" class="btn-primary" data-lang="learn-more">Learn more</a>
+                        <h2 data-lang="sauna-title">Who are we?</h2>
+                        <p data-lang="sauna-description">We're a family-owned business with a passion for relaxation. We
+                            believe everyone deserves a moment to unwind, and we're here to bring that experience to
+                            you!</p>
                     </div>
                 </div>
                 <div class="right tiles">
@@ -79,11 +77,11 @@
                 </div>
                 <div class="right title">
                     <div class="content">
-                        <h2 data-lang="jacuzzi-title">Jacuzzi</h2>
-                        <p data-lang="jacuzzi-description">What an interesting looking person! I wonder if they've ever
-                            climbed Mount Everest, or seen
-                            the Egyptian Pyramids. If not, I hope that one day they get to. You go random stock image
-                            person! Follow your dreams!</p>
+                        <h2 data-lang="jacuzzi-title">Our Mission</h2>
+                        <p data-lang="jacuzzi-description">We believe that relaxation it's an investment
+                            in your well-being. Our goal is to make sauna and jacuzzi experiences
+                            accessible anytime, helping you recharge, de-stress, and improve your health. Take
+                            care of your body today, and your future self will thank you!</p>
                     </div>
                 </div>
 
@@ -98,10 +96,9 @@
                 </div>
                 <div class="left title">
                     <div class="content">
-                        <h2 data-lang="health-perks-title">Health Perks</h2>
-                        <p data-lang="health-perks-description">What is the better use of time than taking care of
-                            yourself and having fun?</p>
-                        <a href="#" class="btn-primary" data-lang="learn-more">Learn more</a>
+                        <h2 data-lang="health-perks-title">Services</h2>
+                        <p data-lang="health-perks-description">Rent Sauna & Jacuzzi</p>
+                        <a href="#" data-lang="learn-more">Read more...</a>
                     </div>
                 </div>
 
@@ -116,7 +113,7 @@
                 </div>
                 <div class="right title">
                     <div class="content">
-                        <h2 data-lang="future-title">The future is now.</h2>
+                        <h2 data-lang="future-title"></h2>
                         <p data-lang="future-description">Check out that technology! Imagine if we went back in time and
                             put one of those in the hands
                             of a neanderthal. Do you think they'd be impressed, or just try to club us to death?</p>
@@ -196,6 +193,11 @@
         });
 
     </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
+
 </body>
 
 </html>
