--- a/services.html
+++ b/services.html
@@ -5,13 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-lang="title">Mobilny Relax - Sauna & Jacuzzi</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
     <link rel="icon" type="image/png" href="img/icons/favicon.png">
 </head>
 
@@ -45,7 +41,7 @@
 
     <div id="page-container">
         <div id="content-wrap">
-           
+
         </div>
 
         <footer>
@@ -71,8 +67,10 @@
                 </div>
 
                 <div class="footer-social">
-                    <a href="https://www.facebook.com/profile.php?id=100089057426576" target="_blank"><img src="img/icons/facebook.png"></a>
-                    <a href="https://www.instagram.com/mobilnyrelax/" target="_blank"><img src="img/icons/instagram.png"></a>
+                    <a href="https://www.facebook.com/profile.php?id=100089057426576" target="_blank"><img
+                            src="img/icons/facebook.png"></a>
+                    <a href="https://www.instagram.com/mobilnyrelax/" target="_blank"><img
+                            src="img/icons/instagram.png"></a>
                 </div>
             </div>
         </footer>
@@ -83,11 +81,11 @@
 
         // Load translations
         fetch("translations.json")
-          .then(response => response.json())
-          .then(data => {
-              translations = data;
-              applyLanguage(localStorage.getItem("selectedLanguage") || "en"); // Default to English
-          });
+            .then(response => response.json())
+            .then(data => {
+                translations = data;
+                applyLanguage(localStorage.getItem("selectedLanguage") || "en"); // Default to English
+            });
 
         function changeLanguage(lang) {
             localStorage.setItem("selectedLanguage", lang);
@@ -103,6 +101,11 @@
             });
         }
     </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
+
 </body>
 
 </html>
