--- a/faq.html
+++ b/faq.html
@@ -30,11 +30,11 @@
             <li><a href="gallery.html" data-lang="gallery">Gallery</a></li>
             <li><a href="#" data-lang="faq">FAQ</a></li>
         </ul>
-        <button class="phone-button" data-lang="phone-number">Phone Num.</button>
+        <button class="phone-button" data-lang="phone-number">Phone Num</button>
         <div class="nav-bottom">
             <div class="language-buttons">
                 <button onclick="changeLanguage('en')">English</button>
-                <button onclick="changeLanguage('pl')">Polski</button>
+                <button onclick="changeLanguage('pl')">Polish</button>
             </div>
         </div>
     </nav>
