--- a/gallery.html
+++ b/gallery.html
@@ -31,11 +31,11 @@
             <li><a href="#" data-lang="gallery">Gallery</a></li>
             <li><a href="faq.html" data-lang="faq">FAQ</a></li>
         </ul>
-        <button class="phone-button" data-lang="phone-number">Phone Num.</button>
+        <button class="phone-button" data-lang="phone-number">Phone Num</button>
         <div class="nav-bottom">
             <div class="language-buttons">
                 <button onclick="changeLanguage('en')">English</button>
-                <button onclick="changeLanguage('pl')">Polski</button>
+                <button onclick="changeLanguage('pl')">Polish</button>
             </div>
         </div>
     </nav>
