--- a/contact.html
+++ b/contact.html
@@ -158,6 +158,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/contact.js"></script>
 
 </body>
