--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="card-img-overlay">
                     <h5 data-lang="hero-title" class="card-title">Sauna & Jacuzzi on Wheels</h5>
                     <p class="card-text" data-lang="hero-description">Relax on your terms!</p>
-                    <button id="first-button">Click Me</button>
+                    <a id="first-button" href="contact.html">BOOK NOW</a>
                 </div>
             </div>
 
@@ -73,7 +73,7 @@
 
             <div class="section">
                 <div class="middle">
-                    <img src="img/photos/IMG20230111153851.jpg" />
+                    <img src="img/photos/our-mission.jpg" />
                 </div>
                 <div class="right title">
                     <div class="content">
@@ -86,7 +86,26 @@
                 </div>
 
                 <div class="left tiles">
-                    <img src="img/photos/sauna_rocks_inverted.jpg" />
+                    <img src="img/photos/our-mission-inverted.jpg" />
+                </div>
+            </div>
+
+            <div class="section">
+                <div class="middle">
+                    <img src="img/photos/sauna-left.jpg" />
+                </div>
+                <div class="left title">
+                    <div class="content">
+                        <h2 data-lang="health-perks-title">Services</h2>
+                        <p data-lang="health-perks-description">Rent a fully-equipped sauna or jacuzzi on wheels for
+                            your home, event, or business. We handle delivery, setup, and pick-up — all you need to do
+                            is relax.</p>
+                        <a href="services.html" data-lang="learn-more">Read more...</a>
+                    </div>
+                </div>
+
+                <div class="right tiles">
+                    <img src="img/photos/jacuzzi-right.jpg" />
                 </div>
             </div>
 
@@ -94,34 +113,17 @@
                 <div class="middle">
                     <img src="img/photos/IMG20230111153556.jpg" />
                 </div>
-                <div class="left title">
-                    <div class="content">
-                        <h2 data-lang="health-perks-title">Services</h2>
-                        <p data-lang="health-perks-description">Rent Sauna & Jacuzzi</p>
-                        <a href="#" data-lang="learn-more">Read more...</a>
-                    </div>
-                </div>
-
-                <div class="right tiles">
-                    <img src="img/photos/photo_3.jpg" />
-                </div>
-            </div>
-
-            <div class="section">
-                <div class="middle">
-                    <img src="img/photos/photo_4.jpg" />
-                </div>
                 <div class="right title">
                     <div class="content">
-                        <h2 data-lang="future-title"></h2>
-                        <p data-lang="future-description">Check out that technology! Imagine if we went back in time and
-                            put one of those in the hands
-                            of a neanderthal. Do you think they'd be impressed, or just try to club us to death?</p>
+                        <h2 data-lang="future-title">Health & Wellness</h2>
+                        <p data-lang="future-description">Discover the physical and mental benefits of using a sauna or
+                            jacuzzi.</p>
+                        <a href="services.html" data-lang="learn-more">Read more...</a>
                     </div>
                 </div>
 
                 <div class="left tiles">
-                    <img src="img/photos/photo_4_inverted.jpg" />
+                    <img src="img/photos/photo_3.jpg" />
                 </div>
             </div>
         </div>
