--- a/faq.html
+++ b/faq.html
@@ -7,7 +7,9 @@
     <title data-lang="title">Mobilny Relax - Sauna & Jacuzzi</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/faq.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="img/icons/favicon.png">
 </head>
 
@@ -41,6 +43,100 @@
 
     <div id="page-container">
         <div id="content-wrap">
+            <div class="faq-container">
+                <h2>Frequently Asked Questions</h2>
+
+                <div class="faq-item">
+                    <button class="faq-question"><b>1.</b>What is included in the service?</button>
+                    <div class="faq-answer">
+                        <p>With every booking, we provide delivery of the sauna or jacuzzi to your location, complete
+                            setup, and start-up assistance.</p>
+                    </div>
+                </div>
+                <br>
+                <div class="faq-item">
+                    <button class="faq-question"><b>2.</b>Do I need access to water or electricity?</button>
+                    <div class="faq-answer">
+                        <p>Yes, access to water is required on-site to fill the jacuzzi. Electricity also is needed
+                            to setup.</p>
+                    </div>
+                </div>
+                <br>
+                <div class="faq-item">
+                    <button class="faq-question"><b>3.</b>How long does it take to heat up the sauna or
+                        jacuzzi?</button>
+                    <div class="faq-answer">
+                        <p>The sauna typically takes about 1 to 1.5 hours to fully heat up, depending on outdoor
+                            conditions. The jacuzzi usually needs around 2 to 3 hours to reach the optimal temperature.
+                            We'll start the heating process during setup so it's ready for you as soon as possible.</p>
+                    </div>
+                </div>
+                <br>
+                <div class="faq-item">
+                    <button class="faq-question"><b>4.</b>Is it safe for children or elderly people to use?</button>
+                    <div class="faq-answer">
+                        <p>Yes, both the sauna and jacuzzi are generally safe for children and elderly individuals when
+                            used responsibly. However, we recommend supervision for children at all times and suggest
+                            consulting with a doctor for elderly users or anyone with health conditions, just to be
+                            safe.</p>
+                    </div>
+                </div>
+                <br>
+                <div class="faq-item">
+                    <button class="faq-question"><b>5.</b>How far in advance should I book the rental?</button>
+                    <div class="faq-answer">
+                        <p>We recommend booking at least 1 to 2 weeks in advance, especially during weekends and the
+                            holiday season, as those dates fill up quickly. Early booking ensures your preferred date
+                            and time are reserved without stress.</p>
+                    </div>
+                </div>
+                <br>
+                <div class="faq-item">
+                    <button class="faq-question"><b>6.</b>Can the sauna or jacuzzi be placed in any location?</button>
+                    <div class="faq-answer">
+                        <p>The sauna or jacuzzi can be placed in most outdoor locations, as long as there is enough
+                            flat, stable space and access for our trailer to reach the spot. If you're unsure, we're
+                            happy to help you assess whether your location is suitable.</p>
+                    </div>
+                </div>
+                <br>
+                <div class="faq-item">
+                    <button class="faq-question"><b>7.</b>How many people can use the sauna or jacuzzi at once?</button>
+                    <div class="faq-answer">
+                        <p>Our sauna comfortably fits up to 6 people at a time, while the jacuzzi can accommodate 4 to 6
+                            people.</p>
+                    </div>
+                </div>
+                <br>
+                <div class="faq-item">
+                    <button class="faq-question"><b>8.</b>Can the sauna or jacuzzi be used in winter or cold
+                        weather?</button>
+                    <div class="faq-answer">
+                        <p>Yes, definitely! Cold weather makes the experience even better — it's the perfect way to
+                            relax and warm up during winter.</p>
+                    </div>
+                </div>
+                <br>
+                <div class="faq-item">
+                    <button class="faq-question"><b>9.</b>Is the water in the jacuzzi changed for every
+                        customer?</button>
+                    <div class="faq-answer">
+                        <p>Yes — the water is always fresh for every rental. We fill the jacuzzi on-site to ensure
+                            hygiene and safety for each customer.</p>
+                    </div>
+                </div>
+                <br>
+                <div class="faq-item">
+                    <button class="faq-question"><b>10.</b>What is your cancellation policy?</button>
+                    <div class="faq-answer">
+                        <p>You can cancel your booking free of charge up to 48 hours before the scheduled date.
+                            Cancellations made less than 48 hours in advance may be subject to a partial fee to cover
+                            preparation costs. We always try to be flexible, so feel free to contact us if your plans
+                            change.</p>
+                    </div>
+                </div>
+
+            </div>
 
         </div>
 
@@ -100,6 +196,26 @@
                 }
             });
         }
+        const questions = document.querySelectorAll(".faq-question");
+
+        questions.forEach((btn) => {
+            btn.addEventListener("click", () => {
+                const answer = btn.nextElementSibling;
+
+                // Toggle visibility
+                if (answer.style.maxHeight) {
+                    answer.style.maxHeight = null;
+                } else {
+                    // Close other open items (optional)
+                    document.querySelectorAll(".faq-answer").forEach((el) => {
+                        el.style.maxHeight = null;
+                    });
+
+                    // Open this one
+                    answer.style.maxHeight = answer.scrollHeight + "px";
+                }
+            });
+        });
     </script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
